update chinese translation, using deepseek

--- a/locales/zh/translation.json
+++ b/locales/zh/translation.json
@@ -33,9 +33,11 @@
   "files": "文件",
   "tables": "Tables",
   "dbTable": "DB Table",
+  "tableColumn": "表格列",
   "help": "帮助",
   "collisionWith": "冲突",
   "in": "中的",
+  "key": "键",
   "readingAndComparingPacks": "正在阅览与比对Packs文件...",
   "waitForReadingAndComparingPacks": "正在等待所有模组被读取并完成比对...",
   "presetsTooltip1": "键入新名字以创建新的『预设模组列表』",
@@ -191,7 +193,7 @@
   "mergeLoadExistingMsg": "被加载的模组已经存在于已合并模组中。",
   "hideAlreadyMerged": "隐藏已包含于合并模组中的模组。",
   "hideAlreadyMergedMsg": "隐藏已合并模组",
-  "selectFirst": "Select first",
+  "selectFirst": "首先选择",
   "modsToMerge": "将要合并的模组",
   "merge": "合并",
   "size": "文件大小",
@@ -201,40 +203,146 @@
   "mergeModsHelp3": "当模组有新的更新时，合并模组包中将会存在过期的模组。你会在启动游戏按钮上得到红色的警告，你可以通过右键点击合并模组包，并且使用更新（重新合并）选项，这将会更新合并包。这个警告可能会在你启动app时出现，同时也会随着软件更新创意工坊内容后消失，这种情况下你不必执行更新。",
   "mergeModsHelp4": "你可以在管理器中保持那些已被合并过的（单个）模组的启用状态，管理器如果发现已启用的模组被包含在一个合并包中，会自动跳过他们。这个功能依赖于.json文件，如果json文件缺失，那你就必须得手动禁用那些模组，否则游戏将可能由于重复文件而崩溃。",
   "language": "语言:",
-  "customize": "Customize",
-  "groupingsUnitPermissions": "Units, Per Group",
-  "buildingsPermissions": "Buildings",
-  "unit": "Unit",
-  "unitKeySortTableOrder": "(Default Order)",
-  "owner": "Owner",
-  "group": "Group",
-  "allowed": "Allowed",
-  "factionsUnitPermissions": "Units, Per Faction",
-  "uniqueAgentsPermissions": "Legendary Lords And Heroes",
-  "agentSubtype": "Agent Subtype",
-  "campaignGroup": "Campaign Group",
-  "agentsPermissions": "Lords And Heroes",
-  "agentSubtypeAndType": "Agent Subtype (Agent Type)",
-  "faction": "Faction",
-  "Building": "Building",
-  "cultureSubcultureFaction": "Culture, Subculture, Faction (All 3 Optional)",
-  "modCustomizationHelp1": "This panel allows you to customize mods, currently you can disable units, buildings and agents (lords and heroes).",
-  "modCustomizationHelp2": "The way the game handles unit permissions, a unit can have a group permission (which can affect multiple factions) or a per-faction permission, or both. For game stability reasons only group permissions can be disabled. Note this won't affect custom battles since that uses a different system!",
-  "modCustomizationHelp3": "Generic agents (lords and heroes) are tied to campaign groups and you can disable them that way, except for legendary agents which have their own tab.",
-  "modCustomizationHelp4": "The manager customizes a mod by creating a copy of the pack, with the necessary changes, inside a new 'whmm_overwrites' subfolder inside your WH3 folder each time you start the game. Note those copies are currently never deleted or cleaned up. I'm not sure how this affects multiplayer but it's likely you'll get 'different versions' warnings since the game thinks your packs are different even when they're not, but I'm not sure. Removing the customization for a mod will also give you a warning when loading a save that the pack is missing since we're now using the original mod pack, not the customized version of it, but you can ignore that.",
-  "setFolderPathsManuallyWH3": "The mod manager tried to get WH3 folder locations from Windows Registry, but it couldn't find them! You'll have to set them manually!",
-  "setFolderPathsManuallyThreeKingdoms": "The mod manager tried to get Three Kingdoms folder locations from Windows Registry, but it couldn't find them! You'll have to set them manually!",
-  "setFolderPathsManuallyOptionallyWH3": "The mod manager automatically found WH3 folder paths from the Windows Registry, but you can set them manually here.",
-  "setFolderPathsManuallyOptionallyThreeKingdoms": "The mod manager automatically found Three Kingdoms folder paths from the Windows Registry, but you can set them manually here.",
-  "wh2": "Warhammer 2",
-  "wh3": "Warhammer 3",
-  "threeKingdoms": "Three Kingdoms",
-  "mainWH2Folder": "The main Warhammer 2 folder that contains Warhammer2.exe, for example C:\\Program Files (x86)\\Steam\\steamapps\\common\\Total War WARHAMMER II",
-  "mainThreeKingdomsFolder": "The main Three Kingdoms folder that contains Three_Kingdoms.exe, for example C:\\Program Files (x86)\\Steam\\steamapps\\common\\Total War THREE KINGDOMS",
-  "wh2Folder": "WH2 folder:",
-  "threeKingdomsFolder": "Three Kingdoms folder:",
-  "selectWH2Folder": "Select WH2 Folder",
-  "selectThreeKingdomsFolder": "Select Three Kingdoms Folder",
-  "wh2ContentFolder": "The Warhammer 2 Steam Workshop content folder named 594570 (which is the steam ID for WH2) that contains mods, for example C:\\Program Files (x86)\\Steam\\steamapps\\workshop\\content\\594570",
-  "threeKingdomsContentFolder": "The Three Kingdoms Steam Workshop content folder named 779340 (which is the steam ID for 3K) that contains mods, for example C:\\Program Files (x86)\\Steam\\steamapps\\workshop\\content\\779340"
+  "customize": "自定义",
+  "groupingsUnitPermissions": "单位，按组别",
+  "buildingsPermissions": "建筑",
+  "unit": "单位",
+  "unitKeySortTableOrder": "（默认顺序）",
+  "owner": "所有者",
+  "group": "组别",
+  "allowed": "允许",
+  "factionsUnitPermissions": "单位，按派系",
+  "uniqueAgentsPermissions": "传奇领主与英雄",
+  "agentSubtype": "代理子类型",
+  "campaignGroup": "战役组别",
+  "agentsPermissions": "领主与英雄",
+  "agentSubtypeAndType": "代理子类型（代理类型）",
+  "faction": "派系",
+  "Building": "建筑",
+  "cultureSubcultureFaction": "文化、子文化、派系（三者可选）",
+  "modCustomizationHelp1": "此面板允许你自定义模组，目前可禁用单位、建筑和代理（领主与英雄）。",
+  "modCustomizationHelp2": "游戏处理单位权限的方式是：单位可以拥有组权限（影响多个派系）或按派系权限，或两者兼有。出于稳定性考虑，只能禁用组权限。注意这不影响自定义战斗，因其使用不同系统！",
+  "modCustomizationHelp3": "普通代理（领主与英雄）与战役组别绑定，可通过该方式禁用，但传奇代理需单独处理。",
+  "modCustomizationHelp4": "管理器通过每次启动游戏时在WH3文件夹中创建新的'whmm_overwrites'子文件夹并复制模组包进行修改。注意这些副本不会自动清理。不确定对多人游戏的影响，但可能导致版本不一致警告。若移除自定义，加载存档时会提示模组包缺失，可忽略。",
+  "setFolderPathsManuallyWH3": "模组管理器尝试从Windows注册表获取战锤3文件夹路径失败！需手动设置！",
+  "setFolderPathsManuallyThreeKingdoms": "模组管理器尝试从Windows注册表获取三国文件夹路径失败！需手动设置！",
+  "setFolderPathsManuallyOptionallyWH3": "模组管理器已通过Windows注册表找到战锤3文件夹路径，但可手动修改。",
+  "setFolderPathsManuallyOptionallyThreeKingdoms": "模组管理器已通过Windows注册表找到三国文件夹路径，但可手动修改。",
+  "wh2": "战锤2",
+  "wh3": "战锤3",
+  "threeKingdoms": "三国",
+  "mainWH2Folder": "包含Warhammer2.exe的战锤2根目录路径，示例路径 C:\\Program Files (x86)\\Steam\\steamapps\\common\\Total War WARHAMMER II",
+  "mainThreeKingdomsFolder": "包含Three_Kingdoms.exe的三国根目录路径，示例路径 C:\\Program Files (x86)\\Steam\\steamapps\\common\\Total War THREE KINGDOMS",
+  "wh2Folder": "战锤2文件夹:",
+  "threeKingdomsFolder": "三国文件夹:",
+  "selectWH2Folder": "选择战锤2文件夹",
+  "selectThreeKingdomsFolder": "选择三国文件夹",
+  "wh2ContentFolder": "战锤2的Steam创意工坊文件夹（ID 594570），示例路径 C:\\Program Files (x86)\\Steam\\steamapps\\workshop\\content\\594570",
+  "threeKingdomsContentFolder": "三国的Steam创意工坊文件夹（ID 779340），示例路径 C:\\Program Files (x86)\\Steam\\steamapps\\workshop\\content\\779340",
+  "compatHelpFilesOne": "模组开发者常在不同模组中使用相同文件，此处会显示这些文件，即使它们完全正常且有意为之。若文件大小相同会显示图标（仅比较大小而非内容，但已足够高效）。",
+  "compatHelpFour": "“缺失键”标签页检查模组中缺失的数据库键引用（如单位或属性）。若缺失会导致游戏崩溃。",
+  "compatHelpFive": "“重复键”标签页检查所有模组中的重复ID键。可能是正常修改，也可能是模组开发者疏忽。",
+  "noFileCollisionsFound": "未找到文件冲突！",
+  "noDBKeyCollisionsFound": "未找到数据库键冲突！",
+  "noMissingDBKeysFound": "未找到缺失的数据库键！",
+  "enableAll": "全部启用",
+  "disableAll": "全部禁用",
+  "addCategory": "添加类别:",
+  "addCategoryHelp1": "按住Ctrl移除类别。",
+  "addCategoryHelp2": "按住Ctrl+Shift替换所有类别。",
+  "duplicateKeys": "重复键",
+  "noDuplicateKeysFound": "未找到重复键！",
+  "packName": "包名",
+  "duplicateDBKey": "重复数据库键",
+  "bisectModList": "二分法测试模组列表",
+  "bisectModListRandomly": "随机二分法测试模组列表",
+  "bisectModListMsg": "用于测试模组列表。将当前列表拆分为两个预设，可继续测试并重复拆分。注意：若模组有自定义加载顺序，新预设将保留该顺序。",
+  "bisectModListRandomMsg": "随机分配模组至新预设。",
+  "duplicateListenerNames": "重复监听器名称",
+  "noDuplicateListenerNamesFound": "未找到重复监听器名称！",
+  "fileErrors": "文件错误",
+  "noFileErrorsFound": "未找到文件错误！",
+  "packFileName": "模组内部文件名",
+  "fileInsidePack": "模组内部文件: <PACKNAME>",
+  "duplicateListenerName": "重复监听器名称",
+  "line": "行",
+  "column": "列",
+  "compatHelpSix": "“重复监听器名称”标签页检查Lua脚本中通过`core:add_listener`添加的重复监听器名称。若无`core:remove_listener`操作，可能导致冲突。",
+  "compatHelpSeven": "“文件错误”标签页检查Lua和XML文件（含variantmeshdefinitions）的语法错误。某些错误可能被游戏容忍。",
+  "compatHelpEight": "“缺失文件”标签页列出被引用但实际缺失的文件。可能无害（如未使用的文件）。文件类型图标说明：",
+  "forceResubscribe": "强制重新订阅",
+  "forceResubscribeMsg": "强制Steam退订后重新订阅模组（删除并重新下载）。默认处理已启用模组，按住Shift处理全部模组。建议先创建合集备份。",
+  "collapseAll": "全部折叠",
+  "expandAll": "全部展开",
+  "sameFileSize": "文件大小相同",
+  "processingMods": "处理模组中...",
+  "uploadingMod": "上传模组中...",
+  "failedUpdatingMod": "更新模组失败！",
+  "modUpdated": "模组已更新！",
+  "needsToAcceptSteamWorkshopAgreement": "需接受Steam工坊协议！",
+  "uploadModTooltip": "上传模组至工坊。",
+  "uploadMod": "上传模组",
+  "modCreated": "模组已创建",
+  "failedUploadingMod": "上传模组失败！",
+  "missingModThumbnail": "缺失模组封面！",
+  "thumbnailTooBig": "封面文件过大！",
+  "compatCheckVanillaPacksMsg": "兼容性检查时是否解析原版游戏文件。通常关闭，仅用于修复原版问题。",
+  "compatCheckVanillaPacks": "检查原版包兼容性",
+  "troy": "特洛伊",
+  "mainTroyFolder": "包含Troy.exe的特洛伊根目录路径，示例路径 C:\\Program Files (x86)\\Steam\\steamapps\\common\\Total War Troy",
+  "troyFolder": "特洛伊文件夹:",
+  "troyContentFolder": "特洛伊的Steam创意工坊文件夹（ID 1099410），示例路径 C:\\Program Files (x86)\\Steam\\steamapps\\workshop\\content\\1099410",
+  "selectTroyFolder": "选择特洛伊文件夹",
+  "setFolderPathsManuallyTroy": "模组管理器无法通过注册表找到特洛伊文件夹！需手动设置！",
+  "setFolderPathsManuallyOptionallyTroy": "模组管理器已找到特洛伊文件夹路径，但可手动修改。",
+  "pharaoh": "法老",
+  "mainPharaohFolder": "包含Pharaoh.exe的法老根目录路径，示例路径 C:\\Program Files (x86)\\Steam\\steamapps\\common\\Total War Pharaoh",
+  "pharaohFolder": "法老文件夹:",
+  "pharaohContentFolder": "法老的Steam创意工坊文件夹（ID 1937780），示例路径 C:\\Program Files (x86)\\Steam\\steamapps\\workshop\\content\\1937780",
+  "selectPharaohFolder": "选择法老文件夹",
+  "setFolderPathsManuallyPharaoh": "模组管理器无法通过注册表找到法老文件夹！需手动设置！",
+  "setFolderPathsManuallyOptionallyPharaoh": "模组管理器已找到法老文件夹路径，但可手动修改。",
+  "noMissingFilesFound": "未找到缺失文件！",
+  "missingFiles": "缺失文件",
+  "skillsViewer": "技能",
+  "dynasties": "法老王朝",
+  "mainDynastiesFolder": "包含Pharaoh.exe的王朝根目录路径，示例路径 C:\\Program Files (x86)\\Steam\\steamapps\\common\\Total War PHARAOH DYNASTIES",
+  "dynastiesFolder": "王朝文件夹:",
+  "dynastiesContentFolder": "王朝的Steam创意工坊文件夹（ID 2951630），示例路径 C:\\Program Files (x86)\\Steam\\steamapps\\workshop\\content\\2951630",
+  "selectDynastiesFolder": "选择王朝文件夹",
+  "setFolderPathsManuallyDynasties": "模组管理器无法通过注册表找到王朝文件夹！需手动设置！",
+  "setFolderPathsManuallyOptionallyDynasties": "模组管理器已找到王朝文件夹路径，但可手动修改。",
+  "chooseNewModTag": "选择新模组标签:",
+  "upload": "上传",
+  "showHiddenSkills": "显示隐藏技能",
+  "showHiddenModifiersInsideSkills": "显示技能内的隐藏修饰符",
+  "options": "选项",
+  "relaunchingGame": "自动重新启动游戏（点击取消）...",
+  "queueUpRelaunchingGame": "点击以在游戏关闭后重新启动。",
+  "gameCurrentlyRunning": "游戏正在运行！",
+  "searchSaves": "搜索存档",
+  "searchInsidePacks": "在模组内搜索",
+  "searchInsidePacksMsg1": "在启用的模组中搜索文本。",
+  "searchInsidePacksMsg2": "支持ASCII（数据库键）和Unicode（本地化文本）搜索。模组较大时可能耗时较长。",
+  "searchInsidePacksMsg3": "用于通过游戏内键或文本定位所属模组。",
+  "search": "搜索",
+  "searchInsidePacksResults": "包含文本的模组:",
+  "searchInsidePacksDescription": "在启用的模组中搜索文本内容。",
+  "skillUnlockRequirementMultipleParents": "需在上一组别中消耗NUM_SKILL_POINTS点技能点。",
+  "skillUnlockRequirementParent": "需先解锁“REQUIRED_SKILL”。",
+  "skillUnlockWillLock": "解锁此技能将锁定:",
+  "checkSkillRequirements": "检查技能条件",
+  "holdCtrlToTerminateGame": "按住Ctrl并点击以终止游戏。",
+  "skillUnlockRank": "需达到UNLOCK_RANK级",
+  "rank": "等级",
+  "setFolderPathsManuallyRome2": "模组管理器无法通过注册表找到罗马2文件夹！需手动设置！",
+  "setFolderPathsManuallyOptionallyRome2": "模组管理器已找到罗马2文件夹路径，但可手动修改。",
+  "rome2": "罗马2",
+  "mainRome2Folder": "包含Rome2.exe的罗马2根目录路径，示例路径 C:\\Program Files (x86)\\Steam\\steamapps\\common\\Total War Rome II",
+  "rome2Folder": "罗马2文件夹:",
+  "selectRome2Folder": "选择罗马2文件夹",
+  "rome2ContentFolder": "罗马2的Steam创意工坊文件夹（ID 214950），示例路径 C:\\Program Files (x86)\\Steam\\steamapps\\workshop\\content\\214950",
+  "addedMod": "已添加模组:",
+  "resubscribing": "重新订阅中:",
+  "queue": "剩余队列:"
 }
