different colors for mod categories

--- a/locales/en/translation.json
+++ b/locales/en/translation.json
@@ -429,6 +429,10 @@
   "enterCategoryName": "Enter category name...",
   "add": "Add",
   "existingCategories": "Existing Categories",
+  "categoryName": "Category Name",
+  "color": "Color",
+  "actions": "Actions",
+  "setCategoryColor": "Set category color",
   "save": "Save",
   "cancel": "Cancel",
   "renameCategoryTooltip": "Rename category",
