--- a/locales/zh/translation.json
+++ b/locales/zh/translation.json
@@ -351,6 +351,10 @@
   "enterCategoryName": "输入分类名称...",
   "add": "添加",
   "existingCategories": "现有分类",
+  "categoryName": "分类名称",
+  "color": "颜色",
+  "actions": "操作",
+  "setCategoryColor": "设置分类颜色",
   "save": "保存",
   "cancel": "取消",
   "renameCategoryTooltip": "重命名分类",
