--- a/locales/en/translation.json
+++ b/locales/en/translation.json
@@ -26,8 +26,8 @@
   "about": "About",
   "compatHelpFilesOne": "It's common for modders to use the same file in multiple mods, so they'll show here even though that's completely fine and intended. If both files are the same size there will be an icon for that. (This is not the same as comparing their content, for example \"aaa\" and \"bbb\" are the same size, but this comparison is much faster and is good enough in the case of files.)",
   "compatHelpTwo": "In the panel the \"parent\" (underlined) mod will have priority unless a STAR_ICON is next to the \"child\" mod name.",
-  "compatHelpOne": "The Tables tab covers keys in database tables that conflict with each other. Database tables usually are related to units stats. For example overhaul submods that affect unit stats will always have collisions here. Unlike in the Files tab, here the actual table names are compared to determine priority, not pack names. So changing load order won't affect anything here.",
-  "compatHelpThree": "The Files tab covers whole files that overwrite each other, these are usually related to unit visuals: .dds textures, .wsmodel and .variantmeshdefinition files that define how a unit's look is constructed ingame. The game will use the file from the mod with higher load order priority, so between two mod that apply visual changes the ingame result will depend on the relative priority of the two mods.",
+  "compatHelpOne": "The Tables tab covers keys in database tables that conflict with each other. Database tables are usually related to unit stats. For example, overhaul submods that affect unit stats will always have collisions here. Unlike in the Files tab, here the actual table names are compared to determine priority, not pack names. So changing load order won't affect anything here.",
+  "compatHelpThree": "The Files tab covers whole files that overwrite each other, these are usually related to unit visuals: .dds textures, .wsmodel and .variantmeshdefinition files that define how a unit's look is constructed in-game. The game will use the file from the mod with higher load order priority, so between two mods that apply visual changes the in-game result will depend on the relative priority of the two mods.",
   "checkCompat": "Check Compat",
   "modCompatibility": "Mod Compatibility",
   "enabledModsOnly": "Enabled Mods Only",
@@ -74,7 +74,7 @@
   "copyCollectionScriptTooltip2": "Hold Shift if you want to copy all mods, not just enabled mods.",
   "createSteamCollectionHelp1": "This is a way to export mods into a Steam collection. It's not automatic and relies on running a console script in your browser to automate button presses in the browser.",
   "createSteamCollectionHelp2": "Open the create new Steam Workshop collection page in a browser. In the first page a collection name and an image thumbnail are mandatory. In the second page where you select what mods to add to the collection press Ctrl+Shift+I and switch to the console tab from the tabs in upper right:",
-  "createSteamCollectionHelp3": "Paste the script you recieved from pressing the \"Copy Creation Script To Clipboard\" button into the console and press enter:",
+  "createSteamCollectionHelp3": "Paste the script you received from pressing the \"Copy Creation Script To Clipboard\" button into the console and press enter:",
   "createSteamCollectionHelp4": "Two buttons will appear, one to add mods to the collection and a reset button that removes any added mods. Click the green + button that appears and wait for the page to reload.",
   "configureFolderLocations": "Configure Folder Locations",
   "setFolderPathsManuallyWH2": "The mod manager tried to get WH2 folder locations from Windows Registry, but it couldn't find them! You'll have to set them manually!",
