more translation changes

--- a/locales/en/translation.json
+++ b/locales/en/translation.json
@@ -24,9 +24,9 @@
   "coffee": "Buy me a coffee:",
   "byAuthor": "by Prop Joe (Steam) / Shazbot (GitHub)",
   "about": "About",
-  "compatHelpFilesOne": "It's common for modders to use the same file in multiple mods, so they'll show here even though that's completely fine and intended. If both files are the same size there will be an icon for that. (This is not the same as comparing their content, for example \"aaa\" and \"bbb\" are the same size, but this comparison is much faster and is good enough in the case of files.)",
+  "compatHelpFilesOne": "It's common for modders to use the same file in multiple mods, so they'll show here even though that's completely fine and intended. If both files are the same size, there will be an icon for that. This is not the same as comparing their content—for example, \"aaa\" and \"bbb\" are the same size—but this comparison is much faster and good enough for files.",
   "compatHelpTwo": "In the panel the \"parent\" (underlined) mod will have priority unless a STAR_ICON is next to the \"child\" mod name.",
-  "compatHelpOne": "The Tables tab covers keys in database tables that conflict with each other. Database tables are usually related to unit stats. For example, overhaul submods that affect unit stats will always have collisions here. Unlike in the Files tab, here the actual table names are compared to determine priority, not pack names. So changing load order won't affect anything here.",
+  "compatHelpOne": "The Tables tab covers keys in database tables that conflict with each other. Database tables are usually related to unit stats. For example, overhaul submods that affect unit stats will always have collisions here. Unlike in the Files tab, the actual table names are compared to determine priority, not pack names. So changing load order won't affect anything here.",
   "compatHelpThree": "The Files tab covers whole files that overwrite each other, these are usually related to unit visuals: .dds textures, .wsmodel and .variantmeshdefinition files that define how a unit's look is constructed in-game. The game will use the file from the mod with higher load order priority, so between two mods that apply visual changes the in-game result will depend on the relative priority of the two mods.",
   "checkCompat": "Check Compat",
   "modCompatibility": "Mod Compatibility",
@@ -34,7 +34,7 @@
   "files": "Files",
   "tables": "Tables",
   "dbTable": "DB Table",
-  "tableColumn": "Table column",
+  "tableColumn": "Table Column",
   "help": "Help",
   "collisionWith": "Collision with",
   "in": "in",
@@ -70,16 +70,16 @@
   "openSteamCollectionsPage": "Open Steam Page For Creating Game Collections",
   "openSteamCollectionsPageTooltip": "Open Steam Page For Creating Game Collections",
   "copyCollectionScript": "Copy Collection Script To Clipboard",
-  "copyCollectionScriptTooltip1": "Will paste into clipboard a script for populating currently enabled mods into a collection.",
+  "copyCollectionScriptTooltip1": "Copies to clipboard a script for populating currently enabled mods into a collection.",
   "copyCollectionScriptTooltip2": "Hold Shift if you want to copy all mods, not just enabled mods.",
   "createSteamCollectionHelp1": "This is a way to export mods into a Steam collection. It's not automatic and relies on running a console script in your browser to automate button presses in the browser.",
-  "createSteamCollectionHelp2": "Open the create new Steam Workshop collection page in a browser. In the first page a collection name and an image thumbnail are mandatory. In the second page where you select what mods to add to the collection press Ctrl+Shift+I and switch to the console tab from the tabs in upper right:",
+  "createSteamCollectionHelp2": "Open the create new Steam Workshop collection page in a browser. On the first page, a collection name and image thumbnail are mandatory. On the second page where you select mods to add to the collection, press Ctrl+Shift+I and switch to the console tab from the tabs in the upper right:",
   "createSteamCollectionHelp3": "Paste the script you received from pressing the \"Copy Creation Script To Clipboard\" button into the console and press enter:",
   "createSteamCollectionHelp4": "Two buttons will appear, one to add mods to the collection and a reset button that removes any added mods. Click the green + button that appears and wait for the page to reload.",
   "configureFolderLocations": "Configure Folder Locations",
-  "setFolderPathsManuallyWH2": "The mod manager tried to get WH2 folder locations from Windows Registry, but it couldn't find them! You'll have to set them manually!",
-  "setFolderPathsManuallyWH3": "The mod manager tried to get WH3 folder locations from Windows Registry, but it couldn't find them! You'll have to set them manually!",
-  "setFolderPathsManuallyThreeKingdoms": "The mod manager tried to get Three Kingdoms folder locations from Windows Registry, but it couldn't find them! You'll have to set them manually!",
+  "setFolderPathsManuallyWH2": "The mod manager tried to get WH2 folder locations from the Windows Registry, but couldn't find them! You'll have to set them manually.",
+  "setFolderPathsManuallyWH3": "The mod manager tried to get WH3 folder locations from the Windows Registry, but couldn't find them! You'll have to set them manually.",
+  "setFolderPathsManuallyThreeKingdoms": "The mod manager tried to get Three Kingdoms folder locations from the Windows Registry, but couldn't find them! You'll have to set them manually.",
   "setFolderPathsManuallyOptionallyWH2": "The mod manager automatically found WH2 folder paths from the Windows Registry, but you can set them manually here.",
   "setFolderPathsManuallyOptionallyWH3": "The mod manager automatically found WH3 folder paths from the Windows Registry, but you can set them manually here.",
   "setFolderPathsManuallyOptionallyThreeKingdoms": "The mod manager automatically found Three Kingdoms folder paths from the Windows Registry, but you can set them manually here.",
