option to set game process priority to high

--- a/locales/en/translation.json
+++ b/locales/en/translation.json
@@ -205,6 +205,9 @@
   "autoStartCustomBattles": "Auto-start custom battle",
   "autoStartCustomBattles1": "For repetitive visual testing that involves restarting the game.",
   "autoStartCustomBattles2": "Set up a custom battle once and enable this to auto-enter it.",
+  "changeGameProcessPriority": "Change game process priority",
+  "changeGameProcessPriority1": "Sets the game process priority to high when the game starts.",
+  "changeGameProcessPriority2": "Can increase performance and stability when alt-tabbed.",
   "setFolderPaths": "Set Folder Paths",
   "setFolderPathsMsg": "Set Game and Steam Workshop content folder paths.",
   "categoryFilter": "Category filter",
