--- a/locales/zh/translation.json
+++ b/locales/zh/translation.json
@@ -182,6 +182,9 @@
   "autoStartCustomBattles": "自动开始自定义战斗",
   "autoStartCustomBattles1": "针对需要重复启动游戏进行视觉测试的情况",
   "autoStartCustomBattles2": "设置一个自定义战斗并设置为自动进入",
+  "changeGameProcessPriority": "更改游戏进程优先级",
+  "changeGameProcessPriority1": "游戏启动时将游戏进程优先级设置为高。",
+  "changeGameProcessPriority2": "可以提高Alt-Tab切换时的性能和稳定性。",
   "setFolderPaths": "设置目录路径",
   "setFolderPathsMsg": "设置战锤3和Steam工房内容目录路径。",
   "categoryFilter": "类别过滤器",
