add a way to compare mods in save vs currently enabled mods

--- a/locales/en/translation.json
+++ b/locales/en/translation.json
@@ -157,6 +157,14 @@
   "updateAvailable": "Update available",
   "loadSave": "Load Save",
   "loadModsFromSave": "Load Mods From Save",
+  "modsInSaveNotEnabled": "Mods present in save but not currently enabled",
+  "modsInSaveAndEnabled": "Mods that are both present in save and currently enabled",
+  "modsNotInSaveButEnabled": "Mods not present in save but currently enabled",
+  "compareModsInSave": "Compare Mods In Save",
+  "comparingModsInSave": "Comparing Mods In Save",
+  "noMissingPacks": "No missing packs",
+  "noExtraPacks": "No extra packs", 
+  "noCommonPacks": "No common packs",
   "savedGames": "Saved Games",
   "missingRequiredMods": "Missing Required Mods",
   "onbWelcome": "Welcome and thank you for using the Mod Manager. This little tutorial will familiarize you with the UI.",
