--- a/locales/zh/translation.json
+++ b/locales/zh/translation.json
@@ -134,6 +134,14 @@
   "updateAvailable": "可用更新：",
   "loadSave": "读取存档",
   "loadModsFromSave": "启用存档中使用的模组",
+  "modsInSaveNotEnabled": "存档中存在但当前未启用的模组",
+  "modsInSaveAndEnabled": "存档中存在且当前已启用的模组",
+  "modsNotInSaveButEnabled": "存档中不存在但当前已启用的模组",
+  "compareModsInSave": "比较存档中的模组",
+  "comparingModsInSave": "正在比较存档中的模组",
+  "noMissingPacks": "没有缺失的包",
+  "noExtraPacks": "没有额外的包",
+  "noCommonPacks": "没有通用的包",
   "savedGames": "存档",
   "missingRequiredMods": "缺失前置模组",
   "onbWelcome": "欢迎并感谢使用wh3mm模组管理器，希望该教程能协助你熟悉UI界面的设置与使用",
