added some missing locs

--- a/locales/en/translation.json
+++ b/locales/en/translation.json
@@ -454,5 +454,23 @@
   "updateReadyMessage": "The update has been downloaded. The application will now close and update automatically.",
   "updateFailed": "Update Failed",
   "updateNow": "Update Now",
-  "updateFailedMessage": "Failed to download or install update:"
+  "updateFailedMessage": "Failed to download or install update:",
+  "errorSomethingWentWrong": "Something went wrong:",
+  "errorScreenshotInstructions": "You can find and report the error logged inside %appdata%/wh3mm/logs/main.log",
+  "removeBadge": "Remove badge",
+  "noMatches": "NO MATCHES",
+  "allMods": "All mods",
+  "colorBlue": "Blue",
+  "colorEmerald": "Emerald",
+  "colorRed": "Red",
+  "colorAmber": "Amber",
+  "colorPurple": "Purple",
+  "colorRose": "Rose",
+  "colorTeal": "Teal",
+  "colorSlate": "Slate",
+  "colorWhite": "White",
+  "colorLime": "Lime",
+  "colorSky": "Sky",
+  "colorFuchsia": "Fuchsia",
+  "setCategoryColorTooltip": "Set {{category}} color to {{color}}"
 }
