--- a/locales/zh/translation.json
+++ b/locales/zh/translation.json
@@ -376,5 +376,23 @@
   "updateReadyMessage": "更新已下载完成。应用程序将现在关闭并自动更新。",
   "updateFailed": "更新失败",
   "updateNow": "立即更新",
-  "updateFailedMessage": "下载或安装更新失败:"
+  "updateFailedMessage": "下载或安装更新失败:",
+  "errorSomethingWentWrong": "出现错误:",
+  "errorScreenshotInstructions": "您可以在 %appdata%/wh3mm/logs/main.log 中找到并报告错误日志",
+  "removeBadge": "移除标签",
+  "noMatches": "无匹配项",
+  "allMods": "所有模组",
+  "colorBlue": "蓝色",
+  "colorEmerald": "翠绿色",
+  "colorRed": "红色",
+  "colorAmber": "琥珀色",
+  "colorPurple": "紫色",
+  "colorRose": "玫瑰色",
+  "colorTeal": "青色",
+  "colorSlate": "石板色",
+  "colorWhite": "白色",
+  "colorLime": "酸橙色",
+  "colorSky": "天蓝色",
+  "colorFuchsia": "紫红色",
+  "setCategoryColorTooltip": "将{{category}}颜色设置为{{color}}"
 }
