rename packed files inside pack

--- a/locales/en/translation.json
+++ b/locales/en/translation.json
@@ -472,5 +472,30 @@
   "colorLime": "Lime",
   "colorSky": "Sky",
   "colorFuchsia": "Fuchsia",
-  "setCategoryColorTooltip": "Set {{category}} color to {{color}}"
+  "setCategoryColorTooltip": "Set {{category}} color to {{color}}",
+  "renamePackFiles": "Rename Pack Files",
+  "useRegularExpression": "Use Regular Expression",
+  "searchPatternRegex": "Search Pattern (Regular Expression)",
+  "searchText": "Search Text",
+  "searchPatternPlaceholderRegex": "e.g., (ak_teb_)(.*)  or  old_name.*",
+  "searchTextPlaceholder": "e.g., ak_teb_lords",
+  "replaceWith": "Replace With",
+  "replaceWithPlaceholderRegex": "e.g., $1new_$2  or  new_name",
+  "replaceWithPlaceholder": "e.g., new_ak_teb_lords",
+  "pathFilterOptional": "Path Filter (Optional)",
+  "pathFilterPlaceholder": "e.g., db  or  warscape_animated_tables  (leave empty for all paths)",
+  "pathFilterDescription": "Only rename files whose path contains this text. For \"db\\warscape_animated_tables\\file.txt\", you could use \"db\" or \"warscape_animated_tables\"",
+  "preview": "Preview",
+  "filesWillBeRenamed": "{{count}} files will be renamed",
+  "from": "FROM:",
+  "to": "TO:",
+  "noFilesMatch": "No files match the search pattern",
+  "enterSearchPattern": "Enter a search pattern to preview changes",
+  "invalidRegularExpression": "Invalid regular expression",
+  "renaming": "Renaming...",
+  "rename": "Rename",
+  "renameNFiles": "Rename {{count}} Files",
+  "testRename": "Test Rename (No Changes)",
+  "noFilesToRename": "No Files to Rename",
+  "renamePackedFiles": "Rename Packed Files"
 }
