--- a/locales/zh/translation.json
+++ b/locales/zh/translation.json
@@ -394,5 +394,30 @@
   "colorLime": "酸橙色",
   "colorSky": "天蓝色",
   "colorFuchsia": "紫红色",
-  "setCategoryColorTooltip": "将{{category}}颜色设置为{{color}}"
+  "setCategoryColorTooltip": "将{{category}}颜色设置为{{color}}",
+  "renamePackFiles": "重命名Pack文件",
+  "useRegularExpression": "使用正则表达式",
+  "searchPatternRegex": "搜索模式（正则表达式）",
+  "searchText": "搜索文本",
+  "searchPatternPlaceholderRegex": "例如：(ak_teb_)(.*)  或  old_name.*",
+  "searchTextPlaceholder": "例如：ak_teb_lords",
+  "replaceWith": "替换为",
+  "replaceWithPlaceholderRegex": "例如：$1new_$2  或  new_name",
+  "replaceWithPlaceholder": "例如：new_ak_teb_lords",
+  "pathFilterOptional": "路径过滤器（可选）",
+  "pathFilterPlaceholder": "例如：db  或  warscape_animated_tables  （留空表示所有路径）",
+  "pathFilterDescription": "仅重命名路径包含此文本的文件。对于 \"db\\warscape_animated_tables\\file.txt\"，您可以使用 \"db\" 或 \"warscape_animated_tables\"",
+  "preview": "预览",
+  "filesWillBeRenamed": "将重命名{{count}}个文件",
+  "from": "原名：",
+  "to": "新名：",
+  "noFilesMatch": "没有文件匹配搜索模式",
+  "enterSearchPattern": "输入搜索模式以预览更改",
+  "invalidRegularExpression": "无效的正则表达式",
+  "renaming": "重命名中...",
+  "rename": "重命名",
+  "renameNFiles": "重命名{{count}}个文件",
+  "testRename": "测试重命名（不做更改）",
+  "noFilesToRename": "没有文件需要重命名",
+  "renamePackedFiles": "重命名打包文件"
 }
