translated into new languages

--- a/locales/en/translation.json
+++ b/locales/en/translation.json
@@ -477,11 +477,11 @@
   "useRegularExpression": "Use Regular Expression",
   "searchPatternRegex": "Search Pattern (Regular Expression)",
   "searchText": "Search Text",
-  "searchPatternPlaceholderRegex": "e.g., (ak_teb_)(.*)  or  old_name.*",
-  "searchTextPlaceholder": "e.g., ak_teb_lords",
+  "searchPatternPlaceholderRegex": "e.g., (ovn_araby_)(.*)  or  old_name.*",
+  "searchTextPlaceholder": "e.g., ovn_araby_lords",
   "replaceWith": "Replace With",
   "replaceWithPlaceholderRegex": "e.g., $1new_$2  or  new_name",
-  "replaceWithPlaceholder": "e.g., new_ak_teb_lords",
+  "replaceWithPlaceholder": "e.g., new_ovn_araby_lords",
   "pathFilterOptional": "Path Filter (Optional)",
   "pathFilterPlaceholder": "e.g., db  or  warscape_animated_tables  (leave empty for all paths)",
   "pathFilterDescription": "Only rename files whose path contains this text. For \"db\\warscape_animated_tables\\file.txt\", you could use \"db\" or \"warscape_animated_tables\"",
