--- a/locales/zh/translation.json
+++ b/locales/zh/translation.json
@@ -399,11 +399,11 @@
   "useRegularExpression": "使用正则表达式",
   "searchPatternRegex": "搜索模式（正则表达式）",
   "searchText": "搜索文本",
-  "searchPatternPlaceholderRegex": "例如：(ak_teb_)(.*)  或  old_name.*",
-  "searchTextPlaceholder": "例如：ak_teb_lords",
+  "searchPatternPlaceholderRegex": "例如：(ovn_araby_)(.*)  或  old_name.*",
+  "searchTextPlaceholder": "例如：ovn_araby_lords",
   "replaceWith": "替换为",
   "replaceWithPlaceholderRegex": "例如：$1new_$2  或  new_name",
-  "replaceWithPlaceholder": "例如：new_ak_teb_lords",
+  "replaceWithPlaceholder": "例如：new_ovn_araby_lords",
   "pathFilterOptional": "路径过滤器（可选）",
   "pathFilterPlaceholder": "例如：db  或  warscape_animated_tables  （留空表示所有路径）",
   "pathFilterDescription": "仅重命名路径包含此文本的文件。对于 \"db\\warscape_animated_tables\\file.txt\"，您可以使用 \"db\" 或 \"warscape_animated_tables\"",
